--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,14 @@
         justify-content: center;
         align-items: center;
         background: rebeccapurple;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Roboto, Arial, Helvetica, sans-serif;
         color: #FFF;
       }
     </style>
   </head>
   <body>
-    <div class="app"></div>
+    <div class="app">
+      <!-- components injected here -->
+    </div>
   </body>
 </html>
