--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <meta name="theme-color" content="#000">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Open-Sans">
+    <link rel="manifest" href="/src/manifest.json">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <style>
       * {
         box-sizing: border-box;
