--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: Roboto, Arial, Helvetica, sans-serif;
+        font-family: Nunito, Arial, Helvetica, sans-serif;
       }
     </style>
   </head>
