--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <meta name="theme-color" content="#000">
     <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="/public/icons/air@32x32.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <style>
       * {
@@ -15,8 +16,6 @@
       html, body {
         margin: 0;
         padding: 0;
-        width: 100%;
-        height: 100vh;
       }
 
       body {
@@ -24,6 +23,8 @@
         justify-content: center;
         align-items: center;
         font-family: Nunito, Arial, Helvetica, sans-serif;
+        width: 100%;
+        height: 100vh;
       }
     </style>
   </head>
