--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
         font-family: Nunito, Arial, Helvetica, sans-serif;
         width: 100%;
         height: 100vh;
+        overscroll-behavior-y: contain;
       }
     </style>
   </head>
