--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <meta name="theme-color" content="#000">
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/public/icons/air@32x32.png">
+    <link rel="icon" href="/public/icons/air@32x32.webp">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <style>
       * {
