--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
         align-items: center;
         font-family: Nunito, Arial, Helvetica, sans-serif;
         width: 100%;
+        overflow-x: hidden;
       }
     </style>
   </head>
